# helix-lsps

./: Cargo.toml  README.md
.cargo/: config.toml
eslint-lsp/: Cargo.toml  README.md
eslint-lsp/harness/: lsp-harness.mjs  monorepo-smoke.mjs  smoke.mjs
eslint-lsp/node/: eslint-bridge.mjs
eslint-lsp/src/: backend.rs  eslint.rs  main.rs
oxc-lsp/: Cargo.toml  README.md
oxc-lsp/src/: discovery.rs  lib.rs  main.rs  proxy.rs  session.rs
oxc-lsp/tests/: proxy_harness.rs
prettier-lsp/: .gitignore  Cargo.toml  README.md
prettier-lsp/harness/workspace/: package-lock.json  package.json
prettier-lsp/src/: backend.rs  formatter.rs  lib.rs  main.rs  prettier_bridge.mjs
prettier-lsp/tests/: lsp_harness.rs
tsgo-lsp/: Cargo.toml  README.md
tsgo-lsp/src/: discovery.rs  main.rs  proxy.rs  session.rs
tsgo-lsp/tests/: proxy_harness.rs
xtask/: Cargo.toml
xtask/src/: main.rs
