[package]
name = "oxc-lsp"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
crossbeam-channel.workspace = true
lsp-server.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true

[dev-dependencies]
tempfile.workspace = true
